# direct-libstorage

./: .gitignore  CMakeLists.txt  DataStorage.hpp  RandomMemoryAccess.hpp  SequencePoint.hpp  SequenceStorage.hpp  Serialize.hpp  SimpleStorage.hpp  StorageManager.hpp  StorageUtils.hpp  TODO.txt  TradingAlgo.cpp  TradingAlgo.hpp  Utils.hpp  VirtualFileCatalogs.hpp  algo1.cpp  algo2.cpp  build.sh  main.cpp  make_raw.sh  process_rawr.sh
TechAnalysis/: LinearRegression.hpp  MetaSequence.hpp  TechAnalysis.hpp  TrendsDetector.hpp  VolumeProfile.hpp
doc/: StateMachine.txt  Storage.txt
include/libstorage/: DataStorage.hpp  RandomMemoryAccess.hpp  Serialize.hpp  SimpleStorage.hpp  StorageUtils.hpp  VirtualFileCatalogs.hpp
include/storage/: DataStorage.hpp  FixedSizeObjectStorage.hpp  IntervalMap.hpp  ObjectInstanceStorage.hpp  ObjectStorage.hpp  RandomMemoryAccess.hpp  Serialize.hpp  SerializeImpl.hpp  SerializeSpecialization.hpp  SimpleObjectStorage.hpp  SimpleStorage.hpp  Storage.hpp  StorageHelpers.hpp  StorageManager.hpp  StorageManagerDecl.hpp  StorageUtils.hpp  UniqueID.hpp  UniqueIDInterface.hpp  Utils.hpp  VirtualFileCatalog.hpp
src/: CMakeLists.txt  libstorage.cpp
test/: CMakeLists.txt  main.cpp
test/src/: IntervalMap.cpp  ObjectInstanceStorage.cpp  ObjectStorage.cpp  RMA.cpp  SequenceStorage.cpp  Serialize.cpp  SimpleObjectStorage.cpp  SimpleStorage.cpp  StorageBuffer.cpp  StorageHelpers.cpp  StorageManager.cpp  UniqueID.cpp  VirtAddressMapping.cpp  VirtualFileCatalog.cpp
tests/: RMA.cpp  SequenceStorage.cpp  Serialize.cpp  SimpleStorage.cpp  StorageBuffer.cpp  VirtAddressMapping.cpp
